--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -2,16 +2,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 42px);
+    height: 100vh;
 
     .login-wrapper {
         padding: 5rem 2rem;
         border-radius: 5px;
-        background: var(--n-bg);
+        background: var(--dcolor);
         width: 450px;
 
         h2 {
             margin-bottom: 2rem;
+            color: var(--spe);
         }
 
         .log-email {
@@ -19,6 +20,8 @@
 
             input {
                 border-radius: 5px 5px 0 0 ;
+                background: var(--lcolor);
+                border-color: var(--color);
             }
         }
 
@@ -26,6 +29,8 @@
 
             input {
                 border-radius: 0 0 5px 5px;
+                background: var(--lcolor);
+                border-color: var(--color);
             }
         }
     }
