--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -2,70 +2,79 @@
 @import "bootstrap/scss/variables";
 @import "bootstrap/scss/utilities";
 
-.nav-right {
-	position: relative;
-    display: flex;
-    align-items: center;
+nav {
+    background: var(--dark) ;
 
-	.nav-user-wrapper {
-		box-shadow: $box-shadow-lg;
-		width: 30px;
-		height: 30px;
-		overflow: hidden;
-		border-radius: 50%;
-		border: 1px solid var(--n-bg);
-        margin-left: 1rem;
+	.nav-right {
+		position: relative;
+		display: flex;
+		align-items: center;
 
-		img {
-			width: 100%;
+		.nav-user-wrapper {
+			box-shadow: $box-shadow-lg;
+			width: 30px;
+			height: 30px;
+			overflow: hidden;
+			border-radius: 50%;
+			border: 1px solid var(--dgray);
+			margin-left: 1rem;
+            cursor: pointer;
+
+			img {
+				width: 100%;
+			}
+
+			&.active {
+				border-color: var(--spe);
+			}
 		}
+		.nav-user-content {
+			position: absolute;
+			top: 50px;
+			right: 0;
+			background: var(--dark);
+			border-radius: 5px;
+			overflow: hidden;
 
-        &.active {
-            border-color: var(--spe);
-        }
-	}
-	.nav-user-content {
-		position: absolute;
-		top: 50px;
-		right: 0;
-		background: var(--n-bg);
-        border-radius: 5px;
-        overflow: hidden;
+			ul {
+				margin: 0;
+				padding: 0;
 
-		ul {
-			margin: 0;
-			padding: 0;
-			// border-radius: 5px;
-			// overflow: hidden;
-
-			li {
-				color: white;
-				list-style: none;
-
-				.nav-link {
-					display: flex;
-					align-items: center;
-					width: 200px;
+				li {
 					color: white;
-					transition: 0.3s ease;
-                    overflow: hidden;
+					list-style: none;
 
-					.icon-wrapper {
-						width: 1.5rem;
-						margin-right: 1rem;
-					}
-
-					&:hover {
-						background: var(--spe);
+					.nav-link {
+						display: flex;
+						align-items: center;
+						width: 200px;
+						color: white;
 						transition: 0.3s ease;
+						overflow: hidden;
+
+						.icon-wrapper {
+							width: 1.5rem;
+							margin-right: 1rem;
+						}
+
+
+
+						&:hover {
+							background: var(--spe);
+							transition: 0.3s ease;
+						}
 					}
 
-				}
-
-				&:not(:last-child) .nav-link {
-					border-bottom: 1px solid var(--d-bg);
+					&:not(:last-child) .nav-link {
+						border-bottom: 1px solid var(--gray);
+					}
 				}
 			}
 		}
 	}
+
+    .user-crown {
+        display: inline-block;
+        margin-right: 5px;
+    }
 }
