--- a/src/components/profile/Profile.scss
+++ b/src/components/profile/Profile.scss
@@ -26,11 +26,13 @@
 			display: inline-block;
 			margin: O auto;
 			padding: 2px 1rem;
-			color: var(--dark);
-			background: var(--lcolor);
+			color: white;
+			background: var(--ddark);
 			font-size: 1.5rem;
 			border-radius: 5px;
 			margin-top: 10px;
+            font-size: 1.5rem;
+            font-family: 'rb';
 		}
 	}
 
@@ -38,7 +40,7 @@
 		width: 200px;
 		height: 200px;
 		border-radius: 50%;
-		border: 1px solid var(--c);
+		border: 1px solid var(--ddark);
 		background: var(--lc);
 		overflow: hidden;
 
