--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -4,7 +4,7 @@
 
 nav {
     background: rgba(0,0,0,.75); //var(--ddark);
-    //backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 
 	.nav-right {
 		position: relative;
