--- a/src/App.scss
+++ b/src/App.scss
@@ -137,7 +137,7 @@ h5 {
 }
 
 .nav-link {
-	color: white;
+	color: var(--dcolor);
 
 	&:hover {
 		color: var(--spe);
@@ -160,15 +160,16 @@ h5 {
 
 // RESET BOOTSTRAP ///////////
 .form-control {
-	background: var(--lgray);
+	background: var(--lcolor);
 	border: none; //border: 1px solid var(--dcolor);
-	color: var(--ddark);
+	color: var(--dcolor);
 
 	&:focus {
 		box-shadow: none;
 		color: var(--ddark);
 		//border-color: var(--lcolor);
-        border: none;;
+        border: none;
+        background: white;
 	}
 
 	&::placeholder {
