--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -3,8 +3,8 @@
 @import "bootstrap/scss/utilities";
 
 nav {
-    background: rgba(0,0,0,.75); //var(--ddark);
-    backdrop-filter: blur(5px);
+    background: rgb(240, 245, 249, .75); //var(--ddark);
+    backdrop-filter: blur(4px);
 
 	.nav-right {
 		position: relative;
@@ -12,7 +12,7 @@ nav {
 		align-items: center;
 
         .user-info {
-            color: white;
+            color: var(--dcolor);
         }
 
 		.nav-user-wrapper {
@@ -37,9 +37,10 @@ nav {
 			position: absolute;
 			top: 50px;
 			right: 0;
-			background: var(--ddark);
-			border-radius: 5px;
+			background: rgba(240, 245, 249, .75);
+			// border-radius: 5px;
 			overflow: hidden;
+            backdrop-filter: blur(5px);
 
 			ul {
 				margin: 0;
@@ -53,7 +54,7 @@ nav {
 						display: flex;
 						align-items: center;
 						width: 200px;
-						color: white;
+						color: var(--dcolor);
 						transition: 0.3s ease;
 						overflow: hidden;
 
@@ -67,11 +68,12 @@ nav {
 						&:hover {
 							background: var(--spe);
 							transition: 0.3s ease;
+                            color: white;
 						}
 					}
 
 					&:not(:last-child) .nav-link {
-						border-bottom: 1px solid #393838;
+						border-bottom: 1px solid var(--lcolor);
 					}
 				}
 			}
